fixed footer with align-center and changed the padding on menu ul-li-a to 7px 30px on max-width 768px

--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -177,6 +177,10 @@
         align-self: flex-end;
     }
 
+    .header nav ul li a {
+        padding: 7px 30px;
+    }
+
     /* Home */
 
     #hero-section .hero-section-text>p {
